﻿
drkns 24.04.2016 11:15:15 +0200 - build 4637

1. Уточнение 4633.

drkns 24.04.2016 10:02:26 +0200 - build 4636

1. Уточнение 4635.

drkns 23.04.2016 19:19:54 +0200 - build 4635

1. По просьбам телезрителей: в диалоге копирования отображаем счётчики как "%done% / %total%", а не наоборот.

2. Рефакторинг.

drkns 23.04.2016 02:03:50 +0200 - build 4634

1. С форума: lua:far.Message"aaa". После закрытия диалога заголовок консоли не восстанавливается.

drkns 23.04.2016 01:59:07 +0200 - build 4633

1. Рефакторинг.

shmuel 23.04.2016 00:03:37 +0200 - build 4632

1. Экспериментально: снятие тормозов с ECTL_INSERTSTRING (стало быстрее примерно в 50 раз).

drkns 20.04.2016 22:42:13 +0200 - build 4631

1. При вызове диалогов через главное меню не устанавливался правильный заголовок консоли.
   Да и в целом с этим заголовком творилась какая-то дичь. Многое переделано, возможны баги.

drkns 20.04.2016 17:33:13 +0200 - build 4630

1. Рефакторинг.

zg 20.04.2016 13:21:24 +0200 - build 4629

1. уточнение 4628.

zg 20.04.2016 02:44:24 +0200 - build 4628

1. убрана отложенная сортировка цветовых областей в редакторе.

w17 20.04.2016 01:39:19 +0300 - build 4627

1. Fix 4492.

drkns 19.04.2016 22:42:16 +0200 - build 4626

1. gcc build fix.

2. Refactoring.

svs 19.04.2016 18:18:01 +0300 - build 4625

1. SQLite 3.12.2

w17 19.04.2016 13:18:14 +0300 - build 4624

1. Уточнение 4622.

drkns 16.04.2016 01:21:23 +0200 - build 4623

1. Рефакторинг и переименования.

w17 14.04.2016 16:24:08 +0300 - build 4622

1. M#3183: Panel FreeInfo, TotalInfo - add options for human-readable format (e.g. "1.375 T" free space)
   Ctrl-Shift-S (M#3089) теперь влияет и на показ общего размера и свободного места в файловой панели.
   Параметр изменился Panel.Info.ShowBytes -> Panel.ShowBytes

zg 14.04.2016 00:25:20 +0200 - build 4621

1. 0003213: Время перерисовки редактора почему-то становится пропорционально размеру файла.

zg 13.04.2016 23:39:18 +0200 - build 4620
