@@ -1,4 +1,9 @@
-﻿
+﻿zg 25.04.2016 23:43:02 +0200 - build 4638
+
+1. при открытом комбобоксе не работал граббер.
+
+2. DM_SETCOMBOBOXEVENT возвращало мусор.
+
 drkns 24.04.2016 11:15:15 +0200 - build 4637
 
 1. Уточнение 4633.
